GraphVertex mask fixes